// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Link /> correctly onPressIn/onPressOut link styles look as expected 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.600"
      isUnderlined={true}
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.54)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly onPressIn/onPressOut link styles look as expected 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders large link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="large"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders medium link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders small link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="xsmall"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 12,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Renders <Link /> correctly snapshot testing, renders visited link 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    testID="ds-link"
  >
    <Text
      align="flex-start"
      color="primary.800"
      isUnderlined={false}
      size="medium"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "color": "rgba(11, 112, 231, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 14,
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Displaying some link
    </Text>
  </TouchableOpacity>
</View>
`;
